sfdx/force-app/main/default/objects/OrderItem/fields/Skip_Line_Item__c.field-meta.xml
<CustomField>
  <fullName>Skip_Line_Item__c</fullName>
  <label>Skip Line Item in Stripe</label>
  <description>If true, this line item will not be sent to Stripe Billing.</description>
  <defaultValue>false</defaultValue>
  <type>Checkbox</type>
</CustomField>