sfdx/force-app/main/default/objects/OrderItem/fields/Stripe_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_ID__c</fullName>
    <externalId>true</externalId>
    <description>The Id of the Subscription Item Record in the Stripe data set.</description>
    <inlineHelpText>The Id of the Subscription Item Record in your Stripe Dashboard.</inlineHelpText>
    <label>Stripe ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>